--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -19,7 +19,8 @@
 }
 
 .navItems{
-
+    display: flex;
+    justify-content: space-between;
 }
 
 .navButton{
@@ -28,4 +29,12 @@
     padding: 5px 10px;
     cursor: pointer;
     color: #2c7df3;
+}
+a,a:visited{
+    color:white;
+    text-decoration: none;
+    padding:5px;
+}
+a:hover{
+    color:lightblue;
 }
