--- a/src/components/Utils/flippingcard.css
+++ b/src/components/Utils/flippingcard.css
@@ -1,6 +1,6 @@
 .card-container{
     width:300px;
-    min-height: 200px;
+    min-height: 300px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -10,7 +10,7 @@
 }
 .card{
     width:300px;
-    min-height: 200px;
+    min-height: 300px;
     position: relative;
     /*transition: transform 2000ms;*/
     transform-style: preserve-3d;
@@ -24,6 +24,7 @@
     width: 100%;
     display: block;
     background-color: #ddeafd;
+    border-radius: 10px;
     box-shadow: 10px 10px 5px rgb(95, 77, 99);
     padding: 10px;
     position: absolute;
@@ -44,5 +45,9 @@
 
 .card.flipped > .back{
     transform: rotateY(0deg);
+}
+.card-image {
+    width: 100%;
+    border-radius: 10px;
 }
 
