--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -1,5 +1,5 @@
 .navbar{
-    height: 50px;
+    height: auto;
     background-color: #2c7df3;
     display: flex;
     justify-content: center;
@@ -24,11 +24,7 @@
     display: flex;
     justify-content: space-between;
 }
-.navLinks{
-    display: grid;
-    grid-template-columns: repeat(5,1fr);
 
-}
 .navButtonsContainer{
     display: flex;
 }
@@ -38,15 +34,4 @@
     padding: 5px 10px;
     cursor: pointer;
     color: #2c7df3;
-}
-a,a:visited{
-    color:white;
-    text-decoration: none;
-    padding:5px;
-}
-a:hover{
-    color:lightblue;
-}
-.navLinks>a{
-    padding:15px;
 }
